Fix Firefox/Safari discrepancies
iPhone image and footer on homepage were
messed up.

--- a/views/app.sass
+++ b/views/app.sass
@@ -232,7 +232,7 @@ body.homepage #container .last-in-container
   padding: 0
   
 #page
-  margin: 0 auto 25px
+  margin: 0 auto
   padding: 10px 115px 0
   position: relative
   width: $page_width
@@ -360,10 +360,8 @@ body.homepage #menu
 #footer
   background: $footer_colour
   border-top: $border_colour 1px solid
-  clear: both
   color: #999
   font-size: .75em
-  margin: -25px 0 0
   padding: 6px 0
   width: auto
   text-shadow: .1em .1em 3px $header_colour - #fff
